[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/font-title.tres" type="DynamicFont" id=1]
[ext_resource path="res://themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://scenes/GameMenu.gd" type="Script" id=3]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 294.0
margin_top = 85.0
margin_right = 730.0
margin_bottom = 515.0

[node name="LabelTitle" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 436.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 1 )
custom_colors/font_color = Color( 0.611765, 0.631373, 0.552941, 1 )
text = "Game Menu"
align = 1
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 436.0
margin_bottom = 112.0
custom_constants/margin_bottom = 50

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 436.0
margin_bottom = 376.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/PanelContainer"]
margin_left = 3.0
margin_top = 3.0
margin_right = 433.0
margin_bottom = 257.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 410.0
margin_bottom = 234.0
custom_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 390.0
margin_bottom = 18.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 120.0
margin_bottom = 18.0
rect_min_size = Vector2( 120, 0 )
text = "Alive Threshold"
align = 1

[node name="SliderAliveThreshold" type="HSlider" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 130.0
margin_right = 330.0
margin_bottom = 16.0
rect_min_size = Vector2( 200, 0 )
step = 5.0
value = 50.0
tick_count = 21

[node name="LabelAliveThreshold" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 340.0
margin_right = 390.0
margin_bottom = 18.0
rect_min_size = Vector2( 50, 0 )
text = "50%"
align = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 38.0
margin_right = 390.0
margin_bottom = 64.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_top = 4.0
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
text = "Connect Start to End"
align = 1

[node name="CheckBoxConnectStartToEnd" type="CheckBox" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 130.0
margin_right = 154.0
margin_bottom = 26.0

[node name="HBoxContainer3" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 390.0
margin_bottom = 110.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_top = 4.0
margin_right = 120.0
margin_bottom = 22.0
rect_min_size = Vector2( 120, 0 )
text = "Connect Start"
align = 1

[node name="CheckBoxConnectStart" type="CheckBox" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer3"]
margin_left = 130.0
margin_right = 154.0
margin_bottom = 26.0

[node name="HBoxContainer4" type="HBoxContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 390.0
margin_bottom = 154.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_top = 3.0
margin_right = 120.0
margin_bottom = 21.0
rect_min_size = Vector2( 120, 0 )
text = "Rows"
align = 1

[node name="InputRows" type="OptionButton" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 130.0
margin_right = 180.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
text = "5"
items = [ "5", null, false, 0, null, "7", null, false, 1, null, "10", null, false, 2, null, "15", null, false, 3, null, "20", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 190.0
margin_top = 3.0
margin_right = 310.0
margin_bottom = 21.0
rect_min_size = Vector2( 120, 0 )
text = "Cols"
align = 1

[node name="InputCols" type="OptionButton" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer4"]
margin_left = 320.0
margin_right = 370.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
text = "5"
items = [ "5", null, false, 0, null, "7", null, false, 1, null, "10", null, false, 2, null, "15", null, false, 3, null, "20", null, false, 4, null ]
selected = 0

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 174.0
margin_right = 390.0
margin_bottom = 214.0

[node name="ButtonStart" type="Button" parent="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 95.0
margin_right = 295.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 0
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 380.0
margin_right = 436.0
margin_bottom = 430.0
custom_constants/margin_bottom = 50

[connection signal="value_changed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/SliderAliveThreshold" to="." method="_on_SliderAliveThreshold_value_changed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/ButtonStart" to="." method="_on_ButtonStart_pressed"]
